--- a/views/login.ejs
+++ b/views/login.ejs
@@ -68,7 +68,7 @@
           admin: '/',
           secretary: '/attendance',
           responsible: '/activities',
-          viewer: '/members'
+          viewer: '/activities'
         };
 
         let target = null;
